docs(versions): 全面审查和完善各版本文档内容
主要修改:
- 修正 String Templates 状态（JDK 25 已撤销，正在重新设计）
- 更新 JDK 26 特性（HTTP/3 正式版、Scoped Values 正式版）
- 修正 JDK 21 特性状态（Virtual Threads、Pattern Matching for switch 正式版）
- 更新各版本预览次数标注（Primitive Types in Patterns、Implicit Classes 等）
- 修正 GC 默认选择表（ZGC 不是默认 GC）
- 更新 JDK 25 发布时间线（2024 → 2025）
- 完善 JDK 25 JEP 汇总（Scoped Values、Flexible Constructor Bodies 等正式版）
- 更新各版本 JEP 编号和状态描述

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>